# swarm_explorer

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
.cache/clangd/index/: bt_dispatcher_node.cpp.30ADC866C1829741.idx  qr_detector_node.cpp.4DD6D5636D843D95.idx  qr_detector_node.cpp.DAE286206D1E950E.idx
src/swarm_bringup/: CMakeLists.txt  package.xml
src/swarm_bringup/config/: bridge.yaml  controllers.yaml  ekf_fusion.yaml  nav2_params.yaml  warehouse_task_tree.xml
src/swarm_bringup/launch/: bt_run.launch.py  nav_bringup.launch.py  navigation.launch.py  sim_bringup.launch.py  slam_bringup.launch.py  spawn_robot.launch.py
src/swarm_bringup/maps/: warehouse_map.pgm  warehouse_map.yaml
src/swarm_bringup/scripts/: patrol_demo.py  task_dispatcher.py
src/swarm_bringup/src/: bt_dispatcher_node.cpp
src/swarm_description/: CMakeLists.txt  package.xml
src/swarm_description/urdf/: common_macros.xacro  mobile_base.xacro  robot.urdf.xacro  sensors_stack.xacro
src/swarm_description/worlds/: warehouse.sdf
src/swarm_perception/: CMakeLists.txt  package.xml
src/swarm_perception/src/: qr_detector_node.cpp
