<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schtypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configurations</description>
  <maintainer email="l@todo.todo">l</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>swarm_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rtabmap_launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>