<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schtypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm_description</name>
  <version>0.0.0</version>
  <description>Robot description and Gazebo worlds</description>
  <maintainer email="l@todo.todo">l</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>